Added support code for non-windows10 devices

--- a/SettingsWindow.xaml
+++ b/SettingsWindow.xaml
@@ -16,6 +16,7 @@
             <Button Name="BT_DeleteBlinded" Margin="0,5,0,0" Content="제한된 사용자 삭제" Click="BT_DeleteBlinded_Click"/>
             <Button Name="BT_DeletePosts" Margin="0,5,0,0" Content="스토리 일괄 삭제" Click="BT_DeletePosts_Click"/>
             <Button Name="BT_Credits" Margin="0,5,0,0" Content="개발자 스토리 방문" Click="BT_Credits_Click"/>
+            <Button Name="BT_Homepage" Margin="0,5,0,0" Content="개발자 홈페이지 방문 (업데이트 조회 가능)" Click="BT_Homepage_Click"/>
             <CheckBox Name="CB_Mute" Margin="0,5,0,0" Content="프로그램 상태 알림 끄기" Click="CB_Click"/>
             <CheckBox Name="CB_VIP" Margin="0,5,0,0" Content="관심 친구 알림 끄기" Click="CB_Click"/>
             <CheckBox Name="CB_Like" Margin="0,5,0,0" Content="느낌 알림 끄기" Click="CB_Click"/>
