--- a/SettingsWindow.xaml
+++ b/SettingsWindow.xaml
@@ -14,7 +14,7 @@
         <StackPanel Orientation="Vertical" Margin="10,10,10,10">
             <TextBlock Name="TB_Version" Text="버전 : " Margin="0,0,0,5"/>
             <Button Name="BT_Start" Margin="0,0,0,0" Content="부팅시 자동 시작 설정하기" Click="BT_Start_Click"/>
-            <Button Name="BT_DeleteBlinded" Margin="0,5,0,0" Content="제한된 사용자 삭제" Click="BT_DeleteBlinded_Click"/>
+            <Button Name="BT_FriendMenu" Margin="0,5,0,0" Content="친구 관리" Click="BT_FriendMenu_Click"/>
             <Button Name="BT_DeletePosts" Margin="0,5,0,0" Content="스토리 일괄 삭제" Click="BT_DeletePosts_Click"/>
             <Button Name="BT_BatchEditPosts" Margin="0,5,0,0" Content="스토리 일괄 변경" Click="BT_BatchEditPosts_Click"/>
             <Button Name="BT_Credits" Margin="0,5,0,0" Content="개발자 스토리 방문" Click="BT_Credits_Click"/>
