--- a/ShortcutHelpWindow.xaml
+++ b/ShortcutHelpWindow.xaml
@@ -18,6 +18,7 @@
                     <TextBlock FontSize="18" Text="빠른 첨부 : 파일 드래그 앤 드롭" Margin="0,5,0,0"/>
                     <TextBlock FontSize="18" Text="메뉴 닫기 : ESC" Margin="0,5,0,0"/>
                     <TextBlock FontSize="18" Text="메뉴 열기 : Ctrl+M" Margin="0,5,0,0"/>
+                    <TextBlock FontSize="18" Text="창 닫기 : Ctrl+W 또는 Alt+F4" Margin="0,5,0,0"/>
                 </StackPanel>
             </TabItem>
             <TabItem Header="이미지 뷰어">
@@ -25,12 +26,13 @@
                     <TextBlock FontSize="18" Text="이미지 복사 : 이미지 우클릭 또는 Ctrl+C"/>
                     <TextBlock FontSize="18" Text="이전 이미지 : 방향키 왼쪽" Margin="0,5,0,0"/>
                     <TextBlock FontSize="18" Text="다음 이미지 : 방향키 오른쪽" Margin="0,5,0,0"/>
+                    <TextBlock FontSize="18" Text="창 닫기 : Ctrl+W 또는 Alt+F4" Margin="0,5,0,0"/>
                 </StackPanel>
             </TabItem>
             <TabItem Header="포스트">
                 <StackPanel Orientation="Vertical" Margin="5,5,5,5">
                     <TextBlock FontSize="18" Text="새로고침 : Ctrl+R"/>
-                    <TextBlock FontSize="18" Text="빠른 전송 : Ctrl+R" Margin="0,5,0,0"/>
+                    <TextBlock FontSize="18" Text="빠른 전송 : Ctrl+Enter" Margin="0,5,0,0"/>
                     <TextBlock FontSize="18" Text="느낌 : Ctrl+L" Margin="0,5,0,0"/>
                     <TextBlock FontSize="18" Text="공유 : Ctrl+S" Margin="0,5,0,0"/>
                     <TextBlock FontSize="18" Text="UP : Ctrl+U" Margin="0,5,0,0"/>
@@ -39,6 +41,7 @@
                     <TextBlock FontSize="18" Text="이미지 붙여넣기 : (텍스트 상자에서) Ctrl+V" Margin="0,5,0,0"/>
                     <TextBlock FontSize="18" Text="메뉴 닫기 : ESC" Margin="0,5,0,0"/>
                     <TextBlock FontSize="18" Text="메뉴 열기 : Ctrl+M" Margin="0,5,0,0"/>
+                    <TextBlock FontSize="18" Text="창 닫기 : Ctrl+W 또는 Alt+F4" Margin="0,5,0,0"/>
                 </StackPanel>
             </TabItem>
             <TabItem Header="타임라인 및 프로필">
@@ -46,6 +49,7 @@
                     <TextBlock FontSize="18" Text="새로고침 : Ctrl+R"/>
                     <TextBlock FontSize="18" Text="메뉴 닫기 : ESC" Margin="0,5,0,0"/>
                     <TextBlock FontSize="18" Text="메뉴 열기 : Ctrl+M" Margin="0,5,0,0"/>
+                    <TextBlock FontSize="18" Text="창 닫기 : Ctrl+W 또는 Alt+F4" Margin="0,5,0,0"/>
                 </StackPanel>
             </TabItem>
             <TabItem Header="알림 확인">
@@ -53,11 +57,7 @@
                     <TextBlock FontSize="18" Text="새로고침 : Ctrl+R"/>
                     <TextBlock FontSize="18" Text="메뉴 닫기 : ESC" Margin="0,5,0,0"/>
                     <TextBlock FontSize="18" Text="메뉴 열기 : Ctrl+M" Margin="0,5,0,0"/>
-                </StackPanel>
-            </TabItem>
-            <TabItem Header="공통">
-                <StackPanel Orientation="Vertical" Margin="5,5,5,5">
-                    <TextBlock FontSize="18" Text="창 닫기 : Ctrl+W 또는 Alt+F4"/>
+                    <TextBlock FontSize="18" Text="창 닫기 : Ctrl+W 또는 Alt+F4" Margin="0,5,0,0"/>
                 </StackPanel>
             </TabItem>
         </TabControl>
