--- a/ShortcutHelpWindow.xaml
+++ b/ShortcutHelpWindow.xaml
@@ -35,6 +35,7 @@
                 <ScrollViewer Name="SV_Post" PreviewMouseWheel="ScrollViewer_PreviewMouseWheel" VerticalScrollBarVisibility="Hidden">
                     <StackPanel Orientation="Vertical" Margin="5,5,5,5">
                         <TextBlock FontSize="18" Text="새로고침 : Ctrl+R"/>
+                        <TextBlock FontSize="18" Text="댓글창 펼치기 및 접기 : Ctrl+T" Margin="0,5,0,0"/>
                         <TextBlock FontSize="18" Text="빠른 전송 : Ctrl+Enter" Margin="0,5,0,0"/>
                         <TextBlock FontSize="18" Text="느낌 : Ctrl+L" Margin="0,5,0,0"/>
                         <TextBlock FontSize="18" Text="공유 : Ctrl+S" Margin="0,5,0,0"/>
